<resources>
    <string name="app_name">TutorialApplication</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="send_message_app_button">First App</string>
    <string name="arimethic_app_button">Arimethic App</string>
    <string name="result_calculation">0</string>
    <string name="sum_button">ADD</string>
    <string name="calculator_app_button">Calculator</string>
    <string name="sign">+/-</string>
    <string name="squareroot">√</string>
    <string name="division">÷</string>
    <string name="allclear">AC</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="initResult">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>
