<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="kot.chatchawan.tutorialapplication.CalculatorApp">

    <TextView
        android:text="@string/initResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resultCal"
        android:textSize="65sp"
        android:textAlignment="viewEnd"
        android:background="@android:color/darker_gray"
        android:maxLines = "1"
        android:layout_weight="0.9">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/buttonC"
            android:textAlignment="center"
            android:text="@string/allclear"
            android:textSize="24sp"
            android:onClick="allClear"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/buttonSign"
            android:text="@string/sign"
            android:textSize="24sp"
            android:textAlignment="center"
            android:onClick="changeSign"
            />
        <Button
            android:text="@string/squareroot"
            android:textAlignment="center"
            android:textSize="48sp"
            android:layout_height="match_parent"
            android:id="@+id/buttonSqrt"
            android:onClick="sqrt"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/division"
            android:id="@+id/buttonDiv"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="div"
            android:layout_width="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:text="@string/seven"
            android:id="@+id/button7"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="seven"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/eight"
            android:layout_height="match_parent"
            android:id="@+id/button8"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="eight"
            android:layout_width="match_parent"
            android:layout_weight="1"/>

        <Button
            android:text="@string/nine"
            android:layout_height="match_parent"
            android:id="@+id/button9"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="nine"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/multiply"
            android:id="@+id/buttonMul"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="mul"
            android:layout_width="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:text="@string/four"
            android:id="@+id/button4"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="four"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/five"
            android:layout_height="match_parent"
            android:id="@+id/button5"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="five"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/six"
            android:layout_height="match_parent"
            android:id="@+id/button6"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="six"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/minus"
            android:id="@+id/buttonSub"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="sub"
            android:layout_width="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:text="@string/one"
            android:id="@+id/button1"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="one"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/two"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="two"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/three"
            android:layout_height="match_parent"
            android:id="@+id/button3"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="three"
            android:layout_width="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/plus"
            android:id="@+id/buttonAdd"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="add"
            android:layout_width="match_parent"
            android:layout_weight="1"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:text="@string/zero"
            android:id="@+id/button0"
            android:layout_height="match_parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="zero"
            android:layout_width="match_parent"
            android:layout_weight="0.5" />
        <Button
            android:text="@string/dot"
            android:layout_height="match_parent"
            android:id="@+id/buttonDot"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="dot"
            android:layout_width="match_parent"
            android:layout_weight="0.75" />
        <Button
            android:text="@string/equal"
            android:layout_height="match_parent"
            android:id="@+id/buttonShowResult"
            android:textSize="48sp"
            android:textAlignment="center"
            android:onClick="submit"
            android:layout_width="match_parent"
            android:layout_weight="0.75" />

    </LinearLayout>

</LinearLayout>
