<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

        <Button android:id="@+id/send_message_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message_app_button"
            android:onClick="startSendMessageApp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arimethic_app_button"
            android:onClick="startArimethicApp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_app_button"
            android:onClick="startCalculatorApp" />

</LinearLayout>